XD-000 fix a overflow issue in dsForm-s3Config

--- a/assets/stylesheets/less/partials/datastore.less
+++ b/assets/stylesheets/less/partials/datastore.less
@@ -811,10 +811,17 @@ table.datasetTable {
     #dsForm-path;
 
     .cardMain {
+        height: ~"calc(100% - 132px)";
+        overflow-y: auto;
+
         > .pathSection {
             height: auto;
             line-height: normal;
         }
+    }
+
+    .cardBottom {
+        height: 76px;
     }
 
     .pathSection {
